// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should render with 1 breadcrumb item and last is active 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Header
      breadcrumbs={
        Array [
          Object {
            "isActive": true,
            "title": "First item",
            "to": "#",
          },
        ]
      }
      title=""
    >
      <PageHeader
        data-ouia-component-type="undefined-page-header"
      >
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          data-ouia-component-type="undefined-page-header"
          widget-type="InsightsPageHeader"
        >
          <HeaderBreadcrumbs
            items={
              Array [
                Object {
                  "isActive": true,
                  "title": "First item",
                  "to": "#",
                },
              ]
            }
          >
            <Breadcrumb>
              <nav
                aria-label="Breadcrumb"
                className="pf-c-breadcrumb"
                data-ouia-component-id="OUIA-Generated-Breadcrumb-2"
                data-ouia-component-type="PF4/Breadcrumb"
                data-ouia-safe={true}
              >
                <ol
                  className="pf-c-breadcrumb__list"
                >
                  <BreadcrumbItem
                    isActive={true}
                    key=".$First item"
                    showDivider={false}
                  >
                    <li
                      className="pf-c-breadcrumb__item"
                    >
                      <Link
                        data-ouia-component-id="breadcrumb-to-First item"
                        data-ouia-component-type="undefined-breadcrumb"
                        to="#"
                      >
                        <LinkAnchor
                          data-ouia-component-id="breadcrumb-to-First item"
                          data-ouia-component-type="undefined-breadcrumb"
                          href="/"
                          navigate={[Function]}
                        >
                          <a
                            data-ouia-component-id="breadcrumb-to-First item"
                            data-ouia-component-type="undefined-breadcrumb"
                            href="/"
                            onClick={[Function]}
                          >
                            First item
                          </a>
                        </LinkAnchor>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                </ol>
              </nav>
            </Breadcrumb>
          </HeaderBreadcrumbs>
          <PageHeaderTitle
            title=""
          >
            <Title
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                data-ouia-component-id="OUIA-Generated-Title-4"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
                widget-type="InsightsPageHeaderTitle"
              />
            </Title>
          </PageHeaderTitle>
        </section>
      </PageHeader>
    </Header>
  </Router>
</BrowserRouter>
`;

exports[`Header component should render with 2 breadcrumb items and last is active 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Header
      breadcrumbs={
        Array [
          Object {
            "isActive": false,
            "title": "First item",
            "to": "#",
          },
          Object {
            "isActive": true,
            "title": "Second item",
            "to": "#",
          },
        ]
      }
      title=""
    >
      <PageHeader
        data-ouia-component-type="undefined-page-header"
      >
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          data-ouia-component-type="undefined-page-header"
          widget-type="InsightsPageHeader"
        >
          <HeaderBreadcrumbs
            items={
              Array [
                Object {
                  "isActive": false,
                  "title": "First item",
                  "to": "#",
                },
                Object {
                  "isActive": true,
                  "title": "Second item",
                  "to": "#",
                },
              ]
            }
          >
            <Breadcrumb>
              <nav
                aria-label="Breadcrumb"
                className="pf-c-breadcrumb"
                data-ouia-component-id="OUIA-Generated-Breadcrumb-4"
                data-ouia-component-type="PF4/Breadcrumb"
                data-ouia-safe={true}
              >
                <ol
                  className="pf-c-breadcrumb__list"
                >
                  <BreadcrumbItem
                    isActive={false}
                    key=".$First item"
                    showDivider={false}
                  >
                    <li
                      className="pf-c-breadcrumb__item"
                    >
                      <Link
                        data-ouia-component-id="breadcrumb-to-First item"
                        data-ouia-component-type="undefined-breadcrumb"
                        to="#"
                      >
                        <LinkAnchor
                          data-ouia-component-id="breadcrumb-to-First item"
                          data-ouia-component-type="undefined-breadcrumb"
                          href="/"
                          navigate={[Function]}
                        >
                          <a
                            data-ouia-component-id="breadcrumb-to-First item"
                            data-ouia-component-type="undefined-breadcrumb"
                            href="/"
                            onClick={[Function]}
                          >
                            First item
                          </a>
                        </LinkAnchor>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                  <BreadcrumbItem
                    isActive={true}
                    key=".$Second item"
                    showDivider={true}
                  >
                    <li
                      className="pf-c-breadcrumb__item"
                    >
                      <span
                        className="pf-c-breadcrumb__item-divider"
                      >
                        <AngleRightIcon
                          color="currentColor"
                          noVerticalAlign={false}
                          size="sm"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            />
                          </svg>
                        </AngleRightIcon>
                      </span>
                      <Link
                        data-ouia-component-id="breadcrumb-to-Second item"
                        data-ouia-component-type="undefined-breadcrumb"
                        to="#"
                      >
                        <LinkAnchor
                          data-ouia-component-id="breadcrumb-to-Second item"
                          data-ouia-component-type="undefined-breadcrumb"
                          href="/"
                          navigate={[Function]}
                        >
                          <a
                            data-ouia-component-id="breadcrumb-to-Second item"
                            data-ouia-component-type="undefined-breadcrumb"
                            href="/"
                            onClick={[Function]}
                          >
                            Second item
                          </a>
                        </LinkAnchor>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                </ol>
              </nav>
            </Breadcrumb>
          </HeaderBreadcrumbs>
          <PageHeaderTitle
            title=""
          >
            <Title
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                data-ouia-component-id="OUIA-Generated-Title-6"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
                widget-type="InsightsPageHeaderTitle"
              />
            </Title>
          </PageHeaderTitle>
        </section>
      </PageHeader>
    </Header>
  </Router>
</BrowserRouter>
`;

exports[`Header component should render with 3 breadcrumb items and last is active 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Header
      breadcrumbs={
        Array [
          Object {
            "isActive": false,
            "title": "First item",
            "to": "#",
          },
          Object {
            "isActive": false,
            "title": "Second item",
            "to": "#",
          },
          Object {
            "isActive": true,
            "title": "Third item",
            "to": "#",
          },
        ]
      }
      showTabs={false}
      title=""
    >
      <PageHeader
        data-ouia-component-type="undefined-page-header"
      >
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          data-ouia-component-type="undefined-page-header"
          widget-type="InsightsPageHeader"
        >
          <HeaderBreadcrumbs
            items={
              Array [
                Object {
                  "isActive": false,
                  "title": "First item",
                  "to": "#",
                },
                Object {
                  "isActive": false,
                  "title": "Second item",
                  "to": "#",
                },
                Object {
                  "isActive": true,
                  "title": "Third item",
                  "to": "#",
                },
              ]
            }
          >
            <Breadcrumb>
              <nav
                aria-label="Breadcrumb"
                className="pf-c-breadcrumb"
                data-ouia-component-id="OUIA-Generated-Breadcrumb-5"
                data-ouia-component-type="PF4/Breadcrumb"
                data-ouia-safe={true}
              >
                <ol
                  className="pf-c-breadcrumb__list"
                >
                  <BreadcrumbItem
                    isActive={false}
                    key=".$First item"
                    showDivider={false}
                  >
                    <li
                      className="pf-c-breadcrumb__item"
                    >
                      <Link
                        data-ouia-component-id="breadcrumb-to-First item"
                        data-ouia-component-type="undefined-breadcrumb"
                        to="#"
                      >
                        <LinkAnchor
                          data-ouia-component-id="breadcrumb-to-First item"
                          data-ouia-component-type="undefined-breadcrumb"
                          href="/"
                          navigate={[Function]}
                        >
                          <a
                            data-ouia-component-id="breadcrumb-to-First item"
                            data-ouia-component-type="undefined-breadcrumb"
                            href="/"
                            onClick={[Function]}
                          >
                            First item
                          </a>
                        </LinkAnchor>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                  <BreadcrumbItem
                    isActive={false}
                    key=".$Second item"
                    showDivider={true}
                  >
                    <li
                      className="pf-c-breadcrumb__item"
                    >
                      <span
                        className="pf-c-breadcrumb__item-divider"
                      >
                        <AngleRightIcon
                          color="currentColor"
                          noVerticalAlign={false}
                          size="sm"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            />
                          </svg>
                        </AngleRightIcon>
                      </span>
                      <Link
                        data-ouia-component-id="breadcrumb-to-Second item"
                        data-ouia-component-type="undefined-breadcrumb"
                        to="#"
                      >
                        <LinkAnchor
                          data-ouia-component-id="breadcrumb-to-Second item"
                          data-ouia-component-type="undefined-breadcrumb"
                          href="/"
                          navigate={[Function]}
                        >
                          <a
                            data-ouia-component-id="breadcrumb-to-Second item"
                            data-ouia-component-type="undefined-breadcrumb"
                            href="/"
                            onClick={[Function]}
                          >
                            Second item
                          </a>
                        </LinkAnchor>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                  <BreadcrumbItem
                    isActive={true}
                    key=".$Third item"
                    showDivider={true}
                  >
                    <li
                      className="pf-c-breadcrumb__item"
                    >
                      <span
                        className="pf-c-breadcrumb__item-divider"
                      >
                        <AngleRightIcon
                          color="currentColor"
                          noVerticalAlign={false}
                          size="sm"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            />
                          </svg>
                        </AngleRightIcon>
                      </span>
                      <Link
                        data-ouia-component-id="breadcrumb-to-Third item"
                        data-ouia-component-type="undefined-breadcrumb"
                        to="#"
                      >
                        <LinkAnchor
                          data-ouia-component-id="breadcrumb-to-Third item"
                          data-ouia-component-type="undefined-breadcrumb"
                          href="/"
                          navigate={[Function]}
                        >
                          <a
                            data-ouia-component-id="breadcrumb-to-Third item"
                            data-ouia-component-type="undefined-breadcrumb"
                            href="/"
                            onClick={[Function]}
                          >
                            Third item
                          </a>
                        </LinkAnchor>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                </ol>
              </nav>
            </Breadcrumb>
          </HeaderBreadcrumbs>
          <PageHeaderTitle
            title=""
          >
            <Title
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                data-ouia-component-id="OUIA-Generated-Title-7"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
                widget-type="InsightsPageHeaderTitle"
              />
            </Title>
          </PageHeaderTitle>
        </section>
      </PageHeader>
    </Header>
  </Router>
</BrowserRouter>
`;

exports[`Header component should render with empty breadcrumb 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Header
      breadcrumbs={Array []}
      title=""
    >
      <PageHeader
        data-ouia-component-type="undefined-page-header"
      >
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          data-ouia-component-type="undefined-page-header"
          widget-type="InsightsPageHeader"
        >
          <HeaderBreadcrumbs
            items={Array []}
          >
            <Breadcrumb>
              <nav
                aria-label="Breadcrumb"
                className="pf-c-breadcrumb"
                data-ouia-component-id="OUIA-Generated-Breadcrumb-1"
                data-ouia-component-type="PF4/Breadcrumb"
                data-ouia-safe={true}
              >
                <ol
                  className="pf-c-breadcrumb__list"
                />
              </nav>
            </Breadcrumb>
          </HeaderBreadcrumbs>
          <PageHeaderTitle
            title=""
          >
            <Title
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                data-ouia-component-id="OUIA-Generated-Title-3"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
                widget-type="InsightsPageHeaderTitle"
              />
            </Title>
          </PageHeaderTitle>
        </section>
      </PageHeader>
    </Header>
  </Router>
</BrowserRouter>
`;

exports[`Header component should render with header Hello world 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Header
      title="Hello world"
    >
      <PageHeader
        data-ouia-component-type="undefined-page-header"
      >
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          data-ouia-component-type="undefined-page-header"
          widget-type="InsightsPageHeader"
        >
          <PageHeaderTitle
            title="Hello world"
          >
            <Title
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                data-ouia-component-id="OUIA-Generated-Title-2"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
                widget-type="InsightsPageHeaderTitle"
              >
                Hello world
              </h1>
            </Title>
          </PageHeaderTitle>
        </section>
      </PageHeader>
    </Header>
  </Router>
</BrowserRouter>
`;

exports[`Header component should render with header as empty string 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Header
      title=""
    >
      <PageHeader
        data-ouia-component-type="undefined-page-header"
      >
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          data-ouia-component-type="undefined-page-header"
          widget-type="InsightsPageHeader"
        >
          <PageHeaderTitle
            title=""
          >
            <Title
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                data-ouia-component-id="OUIA-Generated-Title-1"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
                widget-type="InsightsPageHeaderTitle"
              />
            </Title>
          </PageHeaderTitle>
        </section>
      </PageHeader>
    </Header>
  </Router>
</BrowserRouter>
`;

exports[`Header component should render without to attribute 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Header
      breadcrumbs={
        Array [
          Object {
            "isActive": true,
            "title": "First item",
          },
        ]
      }
      title=""
    >
      <PageHeader
        data-ouia-component-type="undefined-page-header"
      >
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          data-ouia-component-type="undefined-page-header"
          widget-type="InsightsPageHeader"
        >
          <HeaderBreadcrumbs
            items={
              Array [
                Object {
                  "isActive": true,
                  "title": "First item",
                },
              ]
            }
          >
            <Breadcrumb>
              <nav
                aria-label="Breadcrumb"
                className="pf-c-breadcrumb"
                data-ouia-component-id="OUIA-Generated-Breadcrumb-3"
                data-ouia-component-type="PF4/Breadcrumb"
                data-ouia-safe={true}
              >
                <ol
                  className="pf-c-breadcrumb__list"
                >
                  <BreadcrumbItem
                    isActive={true}
                    key=".$First item"
                    showDivider={false}
                  >
                    <li
                      className="pf-c-breadcrumb__item"
                    >
                      First item
                    </li>
                  </BreadcrumbItem>
                </ol>
              </nav>
            </Breadcrumb>
          </HeaderBreadcrumbs>
          <PageHeaderTitle
            title=""
          >
            <Title
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                data-ouia-component-id="OUIA-Generated-Title-5"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
                widget-type="InsightsPageHeaderTitle"
              />
            </Title>
          </PageHeaderTitle>
        </section>
      </PageHeader>
    </Header>
  </Router>
</BrowserRouter>
`;
